Address PR feedback
Add note about additional dataset to initial markdown cell.
fix indentation in dict
remove extra cell.

DAS-1478

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dcb7b22f",
+   "id": "3fba6e94",
    "metadata": {},
    "source": [
     "# Harmony GDAL Adapter (HGA) regression tests\n",
@@ -11,13 +11,14 @@
     "\n",
     "* [ALOS AVNIR OBS ORI](https://cmr.earthdata.nasa.gov/search/concepts/C1808440897-ASF.html)\n",
     "* [Sentinel 1 Interferograms](https://cmr.earthdata.nasa.gov/search/concepts/C1595422627-ASF.html)\n",
-    "* [UAVSAR POLSAR Pauli](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1244141264-EEDTEST.html)"
+    "* [UAVSAR POLSAR Pauli](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1244141264-EEDTEST.html)\n",
+    "* [GHRSST Level 4 MUR Global Foundation Sea Surface Temperature Analysis (v4.1)](https://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "637123ed",
+   "id": "b7cada63",
    "metadata": {
     "tags": [
      "parameters"
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33dc8073",
+   "id": "7f0766b7",
    "metadata": {},
    "source": [
     "### Import required packages:"
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b266388",
+   "id": "99f6c451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c452c6",
+   "id": "1fbb7835",
    "metadata": {},
    "source": [
     "### Set up environment dependent variables:"
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b6fa36f",
+   "id": "59e7fab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ea3eaf2",
+   "id": "85ae985d",
    "metadata": {},
    "source": [
     "## AVNIR\n",
@@ -101,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b15d9ba",
+   "id": "9b12328c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91753c8b",
+   "id": "aab35c49",
    "metadata": {},
    "source": [
     "### AVNIR test case 2:\n",
@@ -164,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da27886",
+   "id": "81cd798f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6116e3",
+   "id": "1ae8879b",
    "metadata": {},
    "source": [
     "### AVNIR test case 3:\n",
@@ -227,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c4d216c",
+   "id": "61f13767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a4b93b",
+   "id": "ec888af6",
    "metadata": {},
    "source": [
     "### AVNIR test case 4:\n",
@@ -290,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ec8223",
+   "id": "ff076e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33224af5",
+   "id": "7d59241b",
    "metadata": {},
    "source": [
     "### AVNIR test case 5:\n",
@@ -351,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6db01faf",
+   "id": "d22ba7a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "367df9bb",
+   "id": "94258b25",
    "metadata": {},
    "source": [
     "### AVNIR test case 6:\n",
@@ -422,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "506133c5",
+   "id": "a6cdb628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7da88b6",
+   "id": "f7557e45",
    "metadata": {},
    "source": [
     "### AVNIR test case 7:\n",
@@ -486,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8eee81",
+   "id": "0d5802e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a92f0e6",
+   "id": "9409843c",
    "metadata": {},
    "source": [
     "### AVNIR test case 8:\n",
@@ -562,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "468874aa",
+   "id": "70eb75a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "446cb805",
+   "id": "7adcc83a",
    "metadata": {},
    "source": [
     "### AVNIR test case 9:\n",
@@ -637,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2e66119",
+   "id": "8d252736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "febe802f",
+   "id": "8167880c",
    "metadata": {},
    "source": [
     "### AVNIR test case 10:\n",
@@ -705,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d1f9bc8",
+   "id": "c70a42c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb50d1b",
+   "id": "673869c4",
    "metadata": {},
    "source": [
     "### AVNIR test case 11:\n",
@@ -767,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644191c9",
+   "id": "70a006e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9896fb",
+   "id": "d6dde860",
    "metadata": {},
    "source": [
     "## Sentinel 1 Interferograms:\n",
@@ -828,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1e3eca7",
+   "id": "8b999881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b5c5dd8",
+   "id": "47da7fad",
    "metadata": {},
    "source": [
     "### Sentinel test case 2:\n",
@@ -893,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7a8fd0",
+   "id": "5c5ddeca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25cf05e4",
+   "id": "351a6e68",
    "metadata": {},
    "source": [
     "### Sentinel test case 3:\n",
@@ -956,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a28bdb",
+   "id": "66907e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "863e7014",
+   "id": "9fb1516b",
    "metadata": {},
    "source": [
     "### Sentinel test case 4:\n",
@@ -1021,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a090304c",
+   "id": "7ab215b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18745b13",
+   "id": "908e1d2c",
    "metadata": {},
    "source": [
     "### Sentinel test case 5:\n",
@@ -1088,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf2b6ef",
+   "id": "9007e615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f5014a",
+   "id": "864fec93",
    "metadata": {},
    "source": [
     "### Sentinel test case 6:\n",
@@ -1160,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23bd33a9",
+   "id": "146f0592",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d1cea1",
+   "id": "bd78003c",
    "metadata": {},
    "source": [
     "### Sentinel test case 7:\n",
@@ -1239,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a672001",
+   "id": "077d70f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2258c9ac",
+   "id": "841929a6",
    "metadata": {},
    "source": [
     "### Sentinel test case 8:\n",
@@ -1324,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4560d28",
+   "id": "d4a9efc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dcca0ac",
+   "id": "c689d053",
    "metadata": {},
    "source": [
     "### Sentinel test case 9:\n",
@@ -1389,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c187909",
+   "id": "e10f5d2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5f65937",
+   "id": "46a9f5c8",
    "metadata": {},
    "source": [
     "### Sentinel test case 10:\n",
@@ -1454,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43e49b99",
+   "id": "03327e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578ae081",
+   "id": "46de0d76",
    "metadata": {},
    "source": [
     "### Sentinel test case 11:\n",
@@ -1525,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9edd4c1d",
+   "id": "4d9cb725",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a117d9ce",
+   "id": "c81e4d49",
    "metadata": {},
    "source": [
     "## Sentinel test case 12:\n",
@@ -1587,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c72b4a64",
+   "id": "5904320c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c285845",
+   "id": "788f22ac",
    "metadata": {},
    "source": [
     "### Sentinel test case 13:\n",
@@ -1650,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08821279",
+   "id": "cec9b4ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,7 +1721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c43e98",
+   "id": "ccc0d161",
    "metadata": {},
    "source": [
     "## UAVSAR POLSAR Pauli\n",
@@ -1737,7 +1738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f4a65d9",
+   "id": "3e98098b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f60d89c8",
+   "id": "626236d0",
    "metadata": {},
    "source": [
     "### UAVSAR test case 2:\n",
@@ -1797,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea49970",
+   "id": "c11c753a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,7 +1845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b593c4",
+   "id": "ce1a1897",
    "metadata": {},
    "source": [
     "### UAVSAR test case 3:\n",
@@ -1857,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e94876",
+   "id": "24b33c39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1904,7 +1905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4908aa7",
+   "id": "6b266d24",
    "metadata": {},
    "source": [
     "### UAVSAR test case 4:\n",
@@ -1917,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd602a95",
+   "id": "d1d478b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a99c111f",
+   "id": "4c109f01",
    "metadata": {},
    "source": [
     "### UAVSAR test case 5:\n",
@@ -1986,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f1aada",
+   "id": "54283a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109d5c9f",
+   "id": "b1f9ca99",
    "metadata": {},
    "source": [
     "### UAVSAR test case 6:\n",
@@ -2060,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8c42cd",
+   "id": "75d42d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2118,7 +2119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67acb550",
+   "id": "8fe348ab",
    "metadata": {},
    "source": [
     "### UAVSAR test case 7:\n",
@@ -2133,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "471d7a0e",
+   "id": "ed0785ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "854651b6",
+   "id": "661efddb",
    "metadata": {},
    "source": [
     "### UAVSAR test case 8:\n",
@@ -2194,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8f67ee7",
+   "id": "ac2b6077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2242,7 +2243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f710855",
+   "id": "ea022ee8",
    "metadata": {},
    "source": [
     "### UAVSAR test case 9:\n",
@@ -2257,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b614e027",
+   "id": "858d8e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2312,7 +2313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e4260b",
+   "id": "ab81272e",
    "metadata": {},
    "source": [
     "### UAVSAR test case 10:\n",
@@ -2325,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aa3315d",
+   "id": "bcaf964e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2368,7 +2369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "081e8e1d",
+   "id": "c781a7ee",
    "metadata": {},
    "source": [
     "### UAVSAR test case 11:\n",
@@ -2388,7 +2389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d785b00c",
+   "id": "7e7e277c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2433,7 +2434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d8541b1",
+   "id": "cbef55ec",
    "metadata": {},
    "source": [
     "## GHRSST Level 4 MUR Global Foundation Sea Surface Temperature Analysis\n",
@@ -2448,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b82c0bb1",
+   "id": "1d3f90e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2473,32 +2474,24 @@
     "    mur_variables_one = {'Band1', 'Band2', 'Band3', 'Band4'}\n",
     "\n",
     "    expected_mur_results_one = {'authority': None,\n",
-    "                                        'cs': None,\n",
-    "                                        'file_type': 'png',\n",
-    "                                        'gcs': None,\n",
-    "                                        'gcs_epsg': None,\n",
-    "                                        'n_bands': 4,\n",
-    "                                        'proj_cs': None,\n",
-    "                                        'proj_epsg': None,\n",
-    "                                        'reference_image': 'reference_images/mur_reference_one.png',\n",
-    "                                        'spatial_extent': None,\n",
-    "                                        'variables': mur_variables_one,\n",
-    "                                        'width': 900,\n",
-    "                                        'height': 450}\n",
+    "                                'cs': None,\n",
+    "                                'file_type': 'png',\n",
+    "                                'gcs': None,\n",
+    "                                'gcs_epsg': None,\n",
+    "                                'n_bands': 4,\n",
+    "                                'proj_cs': None,\n",
+    "                                'proj_epsg': None,\n",
+    "                                'reference_image': 'reference_images/mur_reference_one.png',\n",
+    "                                'spatial_extent': None,\n",
+    "                                'variables': mur_variables_one,\n",
+    "                                'width': 900,\n",
+    "                                'height': 450}\n",
     "    \n",
     "    check_request_output(mur_output_one[0], expected_mur_results_one)\n",
     "    clean_test_artefacts(mur_directory_one)\n",
     "else:\n",
     "    print('Skipping test: HGA regression tests not configured for this environment.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45668ae8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
