--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d44e5745",
+   "id": "3fba6e94",
    "metadata": {},
    "source": [
     "# Harmony GDAL Adapter (HGA) regression tests\n",
@@ -11,13 +11,14 @@
     "\n",
     "* [ALOS AVNIR OBS ORI](https://cmr.earthdata.nasa.gov/search/concepts/C1808440897-ASF.html)\n",
     "* [Sentinel 1 Interferograms](https://cmr.earthdata.nasa.gov/search/concepts/C1595422627-ASF.html)\n",
-    "* [UAVSAR POLSAR Pauli](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1244141264-EEDTEST.html)"
+    "* [UAVSAR POLSAR Pauli](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1244141264-EEDTEST.html)\n",
+    "* [GHRSST Level 4 MUR Global Foundation Sea Surface Temperature Analysis (v4.1)](https://podaac.jpl.nasa.gov/dataset/MUR-JPL-L4-GLOB-v4.1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc141ebf",
+   "id": "b7cada63",
    "metadata": {
     "tags": [
      "parameters"
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf5f244f",
+   "id": "7f0766b7",
    "metadata": {},
    "source": [
     "### Import required packages:"
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f863ace",
+   "id": "99f6c451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67472328",
+   "id": "1fbb7835",
    "metadata": {},
    "source": [
     "### Set up environment dependent variables:"
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "794f9e4c",
+   "id": "59e7fab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +72,9 @@
     "        'env': Environment.UAT,\n",
     "        'avnir_collection': Collection(id='C1244141281-EEDTEST'),\n",
     "        'sentinel_collection': Collection(id='C1244141250-EEDTEST'),\n",
-    "        'uavsar_collection': Collection(id='C1244141264-EEDTEST')\n",
-    "    }\n",
+    "        'uavsar_collection': Collection(id='C1244141264-EEDTEST'),\n",
+    "        'mur_collection': Collection(id='C1238621141-POCLOUD'),\n",
+    "    } \n",
     "}\n",
     "\n",
     "environment_information = collection_data.get(harmony_host_url)\n",
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a26dabb",
+   "id": "85ae985d",
    "metadata": {},
    "source": [
     "## AVNIR\n",
@@ -100,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ccfb51",
+   "id": "9b12328c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a7ee160",
+   "id": "aab35c49",
    "metadata": {},
    "source": [
     "### AVNIR test case 2:\n",
@@ -163,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c473ed",
+   "id": "81cd798f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86594f1",
+   "id": "1ae8879b",
    "metadata": {},
    "source": [
     "### AVNIR test case 3:\n",
@@ -226,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd631bf6",
+   "id": "61f13767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97518d21",
+   "id": "ec888af6",
    "metadata": {},
    "source": [
     "### AVNIR test case 4:\n",
@@ -289,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d64bda0",
+   "id": "ff076e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095aa6e6",
+   "id": "7d59241b",
    "metadata": {},
    "source": [
     "### AVNIR test case 5:\n",
@@ -350,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098d47d4",
+   "id": "d22ba7a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3046ebfc",
+   "id": "94258b25",
    "metadata": {},
    "source": [
     "### AVNIR test case 6:\n",
@@ -421,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04df4136",
+   "id": "a6cdb628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d70e6a9",
+   "id": "f7557e45",
    "metadata": {},
    "source": [
     "### AVNIR test case 7:\n",
@@ -485,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "845baabd",
+   "id": "0d5802e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bda2876f",
+   "id": "9409843c",
    "metadata": {},
    "source": [
     "### AVNIR test case 8:\n",
@@ -561,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac75bdc",
+   "id": "70eb75a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fecca4a",
+   "id": "7adcc83a",
    "metadata": {},
    "source": [
     "### AVNIR test case 9:\n",
@@ -636,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3092f37",
+   "id": "8d252736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c91876",
+   "id": "8167880c",
    "metadata": {},
    "source": [
     "### AVNIR test case 10:\n",
@@ -704,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9aeddfd",
+   "id": "c70a42c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b10f323",
+   "id": "673869c4",
    "metadata": {},
    "source": [
     "### AVNIR test case 11:\n",
@@ -766,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39cdb784",
+   "id": "70a006e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecccef33",
+   "id": "d6dde860",
    "metadata": {},
    "source": [
     "## Sentinel 1 Interferograms:\n",
@@ -827,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a1075d",
+   "id": "8b999881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac43325f",
+   "id": "47da7fad",
    "metadata": {},
    "source": [
     "### Sentinel test case 2:\n",
@@ -892,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b854f925",
+   "id": "5c5ddeca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f17d14d",
+   "id": "351a6e68",
    "metadata": {},
    "source": [
     "### Sentinel test case 3:\n",
@@ -955,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3af31cb",
+   "id": "66907e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b721a6",
+   "id": "9fb1516b",
    "metadata": {},
    "source": [
     "### Sentinel test case 4:\n",
@@ -1020,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea24b21",
+   "id": "7ab215b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9b8b5d",
+   "id": "908e1d2c",
    "metadata": {},
    "source": [
     "### Sentinel test case 5:\n",
@@ -1087,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85223ab0",
+   "id": "9007e615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562c041a",
+   "id": "864fec93",
    "metadata": {},
    "source": [
     "### Sentinel test case 6:\n",
@@ -1159,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f090cf23",
+   "id": "146f0592",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcaabb8f",
+   "id": "bd78003c",
    "metadata": {},
    "source": [
     "### Sentinel test case 7:\n",
@@ -1238,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d512977c",
+   "id": "077d70f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75a3e88c",
+   "id": "841929a6",
    "metadata": {},
    "source": [
     "### Sentinel test case 8:\n",
@@ -1323,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27abe31d",
+   "id": "d4a9efc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd7a2bb9",
+   "id": "c689d053",
    "metadata": {},
    "source": [
     "### Sentinel test case 9:\n",
@@ -1388,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1c5703",
+   "id": "e10f5d2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dabd3cf2",
+   "id": "46a9f5c8",
    "metadata": {},
    "source": [
     "### Sentinel test case 10:\n",
@@ -1453,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df9791df",
+   "id": "03327e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "557a30d2",
+   "id": "46de0d76",
    "metadata": {},
    "source": [
     "### Sentinel test case 11:\n",
@@ -1524,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d036c5ac",
+   "id": "4d9cb725",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "995d4c15",
+   "id": "c81e4d49",
    "metadata": {},
    "source": [
     "## Sentinel test case 12:\n",
@@ -1586,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb509ee9",
+   "id": "5904320c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c822161",
+   "id": "788f22ac",
    "metadata": {},
    "source": [
     "### Sentinel test case 13:\n",
@@ -1649,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1158a0c3",
+   "id": "cec9b4ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ec9035",
+   "id": "ccc0d161",
    "metadata": {},
    "source": [
     "## UAVSAR POLSAR Pauli\n",
@@ -1736,7 +1738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb5681f0",
+   "id": "3e98098b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,7 +1785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fa1a86c",
+   "id": "626236d0",
    "metadata": {},
    "source": [
     "### UAVSAR test case 2:\n",
@@ -1796,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5a46787",
+   "id": "c11c753a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1843,7 +1845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a13b26",
+   "id": "ce1a1897",
    "metadata": {},
    "source": [
     "### UAVSAR test case 3:\n",
@@ -1856,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c6edc9",
+   "id": "24b33c39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1903,7 +1905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "043a79d9",
+   "id": "6b266d24",
    "metadata": {},
    "source": [
     "### UAVSAR test case 4:\n",
@@ -1916,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62eecf4",
+   "id": "d1d478b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd619826",
+   "id": "4c109f01",
    "metadata": {},
    "source": [
     "### UAVSAR test case 5:\n",
@@ -1985,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a717123",
+   "id": "54283a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,7 +2046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb1d079",
+   "id": "b1f9ca99",
    "metadata": {},
    "source": [
     "### UAVSAR test case 6:\n",
@@ -2059,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7447fe3",
+   "id": "75d42d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2117,7 +2119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60bfbadc",
+   "id": "8fe348ab",
    "metadata": {},
    "source": [
     "### UAVSAR test case 7:\n",
@@ -2132,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad648c7",
+   "id": "ed0785ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2180,7 +2182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7136b1b7",
+   "id": "661efddb",
    "metadata": {},
    "source": [
     "### UAVSAR test case 8:\n",
@@ -2193,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3e1213",
+   "id": "ac2b6077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2241,7 +2243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67e6404e",
+   "id": "ea022ee8",
    "metadata": {},
    "source": [
     "### UAVSAR test case 9:\n",
@@ -2256,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d854e68",
+   "id": "858d8e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2311,7 +2313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9495f7e",
+   "id": "ab81272e",
    "metadata": {},
    "source": [
     "### UAVSAR test case 10:\n",
@@ -2324,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da887f5c",
+   "id": "bcaf964e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2367,7 +2369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b3de046",
+   "id": "c781a7ee",
    "metadata": {},
    "source": [
     "### UAVSAR test case 11:\n",
@@ -2387,7 +2389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "425e6c42",
+   "id": "7e7e277c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,6 +2431,67 @@
     "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbef55ec",
+   "metadata": {},
+   "source": [
+    "## GHRSST Level 4 MUR Global Foundation Sea Surface Temperature Analysis\n",
+    "\n",
+    "The tests below will use the GHRSST Level 4 MUR Global Foundation Sea Surface Temperature Analysis from PO.DAAC.\n",
+    "\n",
+    "### MUR Test Case 1:\n",
+    "\n",
+    "This test combines a resampled output with a variable subset (`analysed_sst`) format will be a `.png`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d3f90e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  if environment_information is not None:\n",
+    "    granules = { \n",
+    "        Environment.UAT: 'G1240564919-POCLOUD',\n",
+    "        Environment.LOCAL: 'G1240564919-POCLOUD'        \n",
+    "    }\n",
+    "\n",
+    "    mur_directory_one = 'mur_test_one'\n",
+    "\n",
+    "    mur_request_one = Request(collection=environment_information['mur_collection'],\n",
+    "                              variables=['analysed_sst'],\n",
+    "                              granule_id=granules[environment_information['env']],\n",
+    "                              format='image/png',\n",
+    "                              width=900, height=450)\n",
+    "\n",
+    "    mur_output_one = make_request_and_download_result(\n",
+    "        harmony_client, mur_request_one, mur_directory_one\n",
+    "    )\n",
+    "\n",
+    "    mur_variables_one = {'Band1', 'Band2', 'Band3', 'Band4'}\n",
+    "\n",
+    "    expected_mur_results_one = {'authority': None,\n",
+    "                                'cs': None,\n",
+    "                                'file_type': 'png',\n",
+    "                                'gcs': None,\n",
+    "                                'gcs_epsg': None,\n",
+    "                                'n_bands': 4,\n",
+    "                                'proj_cs': None,\n",
+    "                                'proj_epsg': None,\n",
+    "                                'reference_image': 'reference_images/mur_reference_one.png',\n",
+    "                                'spatial_extent': None,\n",
+    "                                'variables': mur_variables_one,\n",
+    "                                'width': 900,\n",
+    "                                'height': 450}\n",
+    "    \n",
+    "    check_request_output(mur_output_one[0], expected_mur_results_one)\n",
+    "    clean_test_artefacts(mur_directory_one)\n",
+    "else:\n",
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+   ]
   }
  ],
  "metadata": {
@@ -2448,8 +2511,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
-  }
+   "version": "3.8.13"
+  },
+  "name": "HGA_regression.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 5
