Fix first AVNIR test
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -121,22 +121,18 @@
     "    avnir_output_one = make_request_and_download_result(harmony_client, avnir_request_one,\n",
     "                                                        avnir_directory_one)\n",
     "\n",
-    "    avnir_variable_base_one = 'ALAV2A237403590-OORIRFU_subsetted'\n",
     "\n",
-    "    avnir_variables_one = {f'{avnir_variable_base_one}__Band1__colored_band_1',\n",
-    "                           f'{avnir_variable_base_one}__Band1__colored_band_2',\n",
-    "                           f'{avnir_variable_base_one}__Band1__colored_band_3',\n",
-    "                           f'{avnir_variable_base_one}__Band1__colored_band_4',\n",
-    "                           f'{avnir_variable_base_one}__Band2__colored_band_1',\n",
-    "                           f'{avnir_variable_base_one}__Band2__colored_band_2',\n",
-    "                           f'{avnir_variable_base_one}__Band2__colored_band_3',\n",
-    "                           f'{avnir_variable_base_one}__Band2__colored_band_4'}\n",
+    "    avnir_variable_base_one = 'ALAV2A237403590-OORIRFU'\n",
+    "    \n",
+    "    avnir_variables_one = {f'IMG-01-{avnir_variable_base_one}_000_band_1',\n",
+    "                           f'IMG-02-{avnir_variable_base_one}_000_band_1'}\n",
+    "    \n",
     "\n",
     "    expected_avnir_results_one = {'authority': 'EPSG',\n",
     "                                  'cs': 'Projected',\n",
     "                                  'gcs': 'WGS 84',\n",
     "                                  'gcs_epsg': '4326',\n",
-    "                                  'n_bands': 8,\n",
+    "                                  'n_bands': 2,\n",
     "                                  'proj_cs':'WGS 84 / UTM zone 22N',\n",
     "                                  'proj_epsg': '32622',\n",
     "                                  'spatial_extent': [-0.05, 0.3, -50.99, -50.75],\n",
