Fix Second AVNIR Test
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "This test case combines a bounding box spatial subset across the Equator with a variable subset for bands 1 and 2.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 2 variables, each with 4 colour bands, for a total of 8 output bands."
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands."
    ]
   },
   {
@@ -155,7 +155,7 @@
     "\n",
     "This test case combines a bounding box spatial subset across the Prime Meridian with a variable subset of bands 3 and 4.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 2 variables, each with 4 colour bands, for a total of 8 output bands."
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands."
    ]
   },
   {
@@ -180,29 +180,23 @@
     "    avnir_output_two = make_request_and_download_result(harmony_client, avnir_request_two,\n",
     "                                                        avnir_directory_two)\n",
     "\n",
-    "    avnir_variable_base_two = 'ALAV2A264953300-OORIRFU_subsetted'\n",
+    "    avnir_variable_base_two = 'ALAV2A264953300-OORIRFU'\n",
     "\n",
-    "    avnir_variables_two = {f'{avnir_variable_base_two}__Band3__colored_band_1',\n",
-    "                           f'{avnir_variable_base_two}__Band3__colored_band_2',\n",
-    "                           f'{avnir_variable_base_two}__Band3__colored_band_3',\n",
-    "                           f'{avnir_variable_base_two}__Band3__colored_band_4',\n",
-    "                           f'{avnir_variable_base_two}__Band4__colored_band_1',\n",
-    "                           f'{avnir_variable_base_two}__Band4__colored_band_2',\n",
-    "                           f'{avnir_variable_base_two}__Band4__colored_band_3',\n",
-    "                           f'{avnir_variable_base_two}__Band4__colored_band_4'}\n",
+    "    avnir_variables_two = {f'IMG-03-{avnir_variable_base_two}_000_band_1',\n",
+    "                           f'IMG-04-{avnir_variable_base_two}_000_band_1'}\n",
     "\n",
     "    expected_avnir_results_two = {'authority': 'EPSG',\n",
     "                                  'cs': 'Projected',\n",
     "                                  'gcs': 'WGS 84',\n",
     "                                  'gcs_epsg': '4326',\n",
-    "                                  'n_bands': 8,\n",
+    "                                  'n_bands': 2,\n",
     "                                  'proj_cs':'WGS 84 / UTM zone 30N',\n",
     "                                  'proj_epsg': '32630',\n",
     "                                  'spatial_extent': [14.74, 14.96, -0.14, 0.14],\n",
     "                                  'variables': avnir_variables_two,\n",
     "                                  'width': 3392,\n",
     "                                  'height': 1762}\n",
-    "    \n",
+    "\n",
     "    check_request_output(avnir_output_two[0], expected_avnir_results_two)\n",
     "    clean_test_artefacts(avnir_directory_two)\n",
     "else:\n",
@@ -218,7 +212,7 @@
     "\n",
     "This test combines a bounding box spatial subset across the anti-meridian with a variable subset for bands 1 and 2.  \n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 2 variables, each with 4 colour bands, for a total of 8 output bands."
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands."
    ]
   },
   {
@@ -281,7 +275,7 @@
     "\n",
     "This test case combines a bounding box spatial subset in the Northern Hemisphere with a variable subset requesting only band 4.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 1 variable, with 4 colour bands, for a total of 4 output bands."
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 1 output band."
    ]
   },
   {
