Pass AVNIR regression #3
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -237,22 +237,16 @@
     "    avnir_output_three = make_request_and_download_result(harmony_client, avnir_request_three,\n",
     "                                                          avnir_directory_three)\n",
     "\n",
-    "    avnir_variable_base_three = 'ALAV2A239652240-OORIRFU_subsetted'\n",
+    "    avnir_variable_base_three = 'ALAV2A239652240-OORIRFU'\n",
     "\n",
-    "    avnir_variables_three = {f'{avnir_variable_base_three}__Band1__colored_band_1',\n",
-    "                             f'{avnir_variable_base_three}__Band1__colored_band_2',\n",
-    "                             f'{avnir_variable_base_three}__Band1__colored_band_3',\n",
-    "                             f'{avnir_variable_base_three}__Band1__colored_band_4',\n",
-    "                             f'{avnir_variable_base_three}__Band2__colored_band_1',\n",
-    "                             f'{avnir_variable_base_three}__Band2__colored_band_2',\n",
-    "                             f'{avnir_variable_base_three}__Band2__colored_band_3',\n",
-    "                             f'{avnir_variable_base_three}__Band2__colored_band_4'}\n",
+    "    avnir_variables_three = {f'IMG-01-{avnir_variable_base_three}_002_band_1',\n",
+    "                             f'IMG-02-{avnir_variable_base_three}_002_band_1'}\n",
     "\n",
     "    expected_avnir_results_three = {'authority': 'EPSG',\n",
     "                                    'cs': 'Projected',\n",
     "                                    'gcs': 'WGS 84',\n",
     "                                    'gcs_epsg': '4326',\n",
-    "                                    'n_bands': 8,\n",
+    "                                    'n_bands': 2,\n",
     "                                    'proj_cs':'WGS 84 / UTM zone 1N',\n",
     "                                    'proj_epsg': '32601',\n",
     "                                    'spatial_extent': [66.44, 66.81, 179.85, -179.95],\n",
