Pass AVNIR regression #4
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -294,16 +294,14 @@
     "    avnir_output_four = make_request_and_download_result(harmony_client, avnir_request_four,\n",
     "                                                         avnir_directory_four)\n",
     "\n",
-    "    avnir_variables_four = {'ALAV2A278852850-OORIRFU_Band4_subsetted__Band4__colored_band_1',\n",
-    "                            'ALAV2A278852850-OORIRFU_Band4_subsetted__Band4__colored_band_2',\n",
-    "                            'ALAV2A278852850-OORIRFU_Band4_subsetted__Band4__colored_band_3',\n",
-    "                            'ALAV2A278852850-OORIRFU_Band4_subsetted__Band4__colored_band_4'}\n",
+    "    avnir_variable_base_four = 'ALAV2A278852850-OORIRFU'\n",
+    "    avnir_variables_four = {f'IMG-04-{avnir_variable_base_four}_000_band_1'}\n",
     "\n",
     "    expected_avnir_results_four = {'authority': 'EPSG',\n",
     "                                   'cs': 'Projected',\n",
     "                                   'gcs': 'WGS 84',\n",
     "                                   'gcs_epsg': '4326',\n",
-    "                                   'n_bands': 4,\n",
+    "                                   'n_bands': 1,\n",
     "                                   'proj_cs':'WGS 84 / UTM zone 14N',\n",
     "                                   'proj_epsg': '32614',\n",
     "                                   'spatial_extent': [36.85, 37.15, -99.13, -98.87],\n",
