--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -324,11 +324,8 @@
     "\n",
     "This test case requests a bounding box spatial subsest in the Northern Hemisphere. No variable subset is specified, so the request will retrieve all variables.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 4 variables, with 4 colour bands, so would perhaps expect 16 output bands, rather than 4.\n",
-    "\n",
-    "# TO FIX: Only produces a single file with 4 bands - with name \"all\", not \"Band1\", \"Band2\" etc.\n",
-    "\n",
-    "**Comparing the output to a request the explicitly requests all variables as a comma-separated list, the output from an \"all\" request is just the colour bands from the first variable.**"
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving all variables and expect 4 output variables.\n",
+    "This output is identical to the output if each band is requested e.g. adding `variables=['Band1','Band2', 'Band3', 'Band4']` to the Request.\n"
    ]
   },
   {
@@ -353,29 +350,18 @@
     "    avnir_output_five = make_request_and_download_result(harmony_client, avnir_request_five,\n",
     "                                                         avnir_directory_five)\n",
     "\n",
-    "    avnir_variable_base_five = 'ALAV2A278852850-OORIRFU_subsetted'\n",
-    "    avnir_variables_five = {f'{avnir_variable_base_five}__Band1__colored_band_1',\n",
-    "                            f'{avnir_variable_base_five}__Band1__colored_band_2',\n",
-    "                            f'{avnir_variable_base_five}__Band1__colored_band_3',\n",
-    "                            f'{avnir_variable_base_five}__Band1__colored_band_4',\n",
-    "                            f'{avnir_variable_base_five}__Band2__colored_band_1',\n",
-    "                            f'{avnir_variable_base_five}__Band2__colored_band_2',\n",
-    "                            f'{avnir_variable_base_five}__Band2__colored_band_3',\n",
-    "                            f'{avnir_variable_base_five}__Band2__colored_band_4',\n",
-    "                            f'{avnir_variable_base_five}__Band3__colored_band_1',\n",
-    "                            f'{avnir_variable_base_five}__Band3__colored_band_2',\n",
-    "                            f'{avnir_variable_base_five}__Band3__colored_band_3',\n",
-    "                            f'{avnir_variable_base_five}__Band3__colored_band_4',\n",
-    "                            f'{avnir_variable_base_five}__Band4__colored_band_1',\n",
-    "                            f'{avnir_variable_base_five}__Band4__colored_band_2',\n",
-    "                            f'{avnir_variable_base_five}__Band4__colored_band_3',\n",
-    "                            f'{avnir_variable_base_five}__Band4__colored_band_4'}\n",
+    "    avnir_variable_base_five = 'ALAV2A278852850-OORIRFU'\n",
+    "\n",
+    "    avnir_variables_five = {f'IMG-03-{avnir_variable_base_five}_000_band_1',\n",
+    "                            f'IMG-02-{avnir_variable_base_five}_000_band_1',\n",
+    "                            f'IMG-04-{avnir_variable_base_five}_000_band_1',\n",
+    "                            f'IMG-01-{avnir_variable_base_five}_000_band_1'}\n",
     "\n",
     "    expected_avnir_results_five = {'authority': 'EPSG',\n",
     "                                   'cs': 'Projected',\n",
     "                                   'gcs': 'WGS 84',\n",
     "                                   'gcs_epsg': '4326',\n",
-    "                                   'n_bands': 16,\n",
+    "                                   'n_bands': 4,\n",
     "                                   'proj_cs':'WGS 84 / UTM zone 14N',\n",
     "                                   'proj_epsg': '32614',\n",
     "                                   'spatial_extent': [36.9, 37.1, -99.18, -98.92],\n",
@@ -386,8 +372,8 @@
     "    check_request_output(avnir_output_five[0], expected_avnir_results_five)\n",
     "    clean_test_artefacts(avnir_directory_five)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
-    "\"\"\""
+    "    print('skipping test: hga regression tests not configured for this environment.')\n",
+    "    "
    ]
   },
   {
