Pass AVNIR regression #6
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "This test combines a bounding box spatial subset in the Southern Hemisphere with a variable subset requesting bands 1 and 3 and specifies the height and width of the output bands.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 2 variables, with 4 colour bands, for a total of 8 bands."
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving 2 output bands.\n"
    ]
   },
   {
@@ -411,22 +411,16 @@
     "    avnir_output_six = make_request_and_download_result(harmony_client, avnir_request_six,\n",
     "                                                        avnir_directory_six)\n",
     "\n",
-    "    avnir_variable_base_six = 'ALAV2A151894120-OORIRFU_regridded_subsetted'\n",
+    "    avnir_variable_base_six = 'ALAV2A151894120-OORIRFU'\n",
     "\n",
-    "    avnir_variables_six = {f'{avnir_variable_base_six}__Band1__colored_band_1',\n",
-    "                           f'{avnir_variable_base_six}__Band1__colored_band_2',\n",
-    "                           f'{avnir_variable_base_six}__Band1__colored_band_3',\n",
-    "                           f'{avnir_variable_base_six}__Band1__colored_band_4',\n",
-    "                           f'{avnir_variable_base_six}__Band3__colored_band_1',\n",
-    "                           f'{avnir_variable_base_six}__Band3__colored_band_2',\n",
-    "                           f'{avnir_variable_base_six}__Band3__colored_band_3',\n",
-    "                           f'{avnir_variable_base_six}__Band3__colored_band_4'}\n",
+    "    avnir_variables_six = {f'IMG-01-{avnir_variable_base_six}_000_band_1',\n",
+    "                           f'IMG-03-{avnir_variable_base_six}_000_band_1'}\n",
     "\n",
     "    expected_avnir_results_six = {'authority': 'EPSG',\n",
     "                                  'cs': 'Projected',\n",
     "                                  'gcs': 'WGS 84',\n",
     "                                  'gcs_epsg': '4326',\n",
-    "                                  'n_bands': 8,\n",
+    "                                  'n_bands': 2,\n",
     "                                  'proj_cs':'WGS 84 / UTM zone 34S',\n",
     "                                  'proj_epsg': '32734',\n",
     "                                  'spatial_extent': [-26.13, -25.77, 18.07, 18.25],\n",
