Pass AVNIR regression #7
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -443,7 +443,7 @@
     "\n",
     "This test combines a bounding box spatial subset (with negative longitude values) with all bands being explicitly specified alongside the height and width of the output array.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 4 variables, with 4 colour bands, for a total of 16 bands."
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving all 4 output bands.\n"
    ]
   },
   {
@@ -469,30 +469,18 @@
     "    avnir_output_seven = make_request_and_download_result(harmony_client, avnir_request_seven,\n",
     "                                                          avnir_directory_seven)\n",
     "\n",
-    "    avnir_variable_base_seven = 'ALAV2A277832590-OORIRFU_regridded_subsetted'\n",
+    "    avnir_variable_base_seven = 'ALAV2A277832590-OORIRFU'\n",
     "\n",
-    "    avnir_variables_seven = {f'{avnir_variable_base_seven}__Band1__colored_band_1',\n",
-    "                             f'{avnir_variable_base_seven}__Band1__colored_band_2',\n",
-    "                             f'{avnir_variable_base_seven}__Band1__colored_band_3',\n",
-    "                             f'{avnir_variable_base_seven}__Band1__colored_band_4',\n",
-    "                             f'{avnir_variable_base_seven}__Band2__colored_band_1',\n",
-    "                             f'{avnir_variable_base_seven}__Band2__colored_band_2',\n",
-    "                             f'{avnir_variable_base_seven}__Band2__colored_band_3',\n",
-    "                             f'{avnir_variable_base_seven}__Band2__colored_band_4',\n",
-    "                             f'{avnir_variable_base_seven}__Band3__colored_band_1',\n",
-    "                             f'{avnir_variable_base_seven}__Band3__colored_band_2',\n",
-    "                             f'{avnir_variable_base_seven}__Band3__colored_band_3',\n",
-    "                             f'{avnir_variable_base_seven}__Band3__colored_band_4',\n",
-    "                             f'{avnir_variable_base_seven}__Band4__colored_band_1',\n",
-    "                             f'{avnir_variable_base_seven}__Band4__colored_band_2',\n",
-    "                             f'{avnir_variable_base_seven}__Band4__colored_band_3',\n",
-    "                             f'{avnir_variable_base_seven}__Band4__colored_band_4'}\n",
+    "    avnir_variables_seven = {f'IMG-01-{avnir_variable_base_seven}_000_band_1',\n",
+    "                             f'IMG-02-{avnir_variable_base_seven}_000_band_1',\n",
+    "                             f'IMG-04-{avnir_variable_base_seven}_000_band_1',\n",
+    "                             f'IMG-03-{avnir_variable_base_seven}_000_band_1',}\n",
     "\n",
     "    expected_avnir_results_seven = {'authority': 'EPSG',\n",
     "                                    'cs': 'Projected',\n",
     "                                    'gcs': 'WGS 84',\n",
     "                                    'gcs_epsg': '4326',\n",
-    "                                    'n_bands': 16,\n",
+    "                                    'n_bands': 4,\n",
     "                                    'proj_cs':'WGS 84 / UTM zone 14N',\n",
     "                                    'proj_epsg': '32614',\n",
     "                                    'spatial_extent': [49.6, 49.99, -97.64, -97.36],\n",
