Pass AVNIR regression #8
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -503,11 +503,7 @@
     "\n",
     "This test requests a bounding box spatial subset, where the bounding box is larger than granule itself. No variables are specified, meaning the request should return all variables.\n",
     "\n",
-    "The input `.zip` file contains 4 GeoTIFFs, one per variable (with names such as \"Band1\"). Each of these is really a science variable (e.g., \"HH minus VV, Red Band\"). Each of the GeoTIFF files in the `.zip` has four colour bands. In this test, we are retrieving 4 variables, with 4 colour bands, so would perhaps expect 16 output bands, rather than 4.\n",
-    "\n",
-    "# TO INVESTIGATE: Only produces a single file with 4 Bands. Called \"all\" not \"Band1\", \"Band2\", etc.\n",
-    "\n",
-    "**Comparing the output to a request the explicitly requests all variables as a comma-separated list, the output from an \"all\" request is just the colour bands from the first variable.**"
+    "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. In this test, we are retrieving all 4 output bands."
    ]
   },
   {
@@ -533,30 +529,18 @@
     "    avnir_output_eight = make_request_and_download_result(harmony_client, avnir_request_eight,\n",
     "                                                          avnir_directory_eight)\n",
     "\n",
-    "    avnir_variable_base_eight = 'ALAV2A150623400-OORIRFU_subsetted'\n",
+    "    avnir_variable_base_eight = 'ALAV2A150623400-OORIRFU'\n",
     "\n",
-    "    avnir_variables_eight = {f'{avnir_variable_base_eight}__Band1__colored_band_1',\n",
-    "                             f'{avnir_variable_base_eight}__Band1__colored_band_2',\n",
-    "                             f'{avnir_variable_base_eight}__Band1__colored_band_3',\n",
-    "                             f'{avnir_variable_base_eight}__Band1__colored_band_4',\n",
-    "                             f'{avnir_variable_base_eight}__Band2__colored_band_1',\n",
-    "                             f'{avnir_variable_base_eight}__Band2__colored_band_2',\n",
-    "                             f'{avnir_variable_base_eight}__Band2__colored_band_3',\n",
-    "                             f'{avnir_variable_base_eight}__Band2__colored_band_4',\n",
-    "                             f'{avnir_variable_base_eight}__Band3__colored_band_1',\n",
-    "                             f'{avnir_variable_base_eight}__Band3__colored_band_2',\n",
-    "                             f'{avnir_variable_base_eight}__Band3__colored_band_3',\n",
-    "                             f'{avnir_variable_base_eight}__Band3__colored_band_4',\n",
-    "                             f'{avnir_variable_base_eight}__Band4__colored_band_1',\n",
-    "                             f'{avnir_variable_base_eight}__Band4__colored_band_2',\n",
-    "                             f'{avnir_variable_base_eight}__Band4__colored_band_3',\n",
-    "                             f'{avnir_variable_base_eight}__Band4__colored_band_4',}\n",
+    "    avnir_variables_eight = { f'IMG-01-{avnir_variable_base_eight}_000_band_1',\n",
+    "                              f'IMG-02-{avnir_variable_base_eight}_000_band_1',\n",
+    "                              f'IMG-04-{avnir_variable_base_eight}_000_band_1',\n",
+    "                              f'IMG-03-{avnir_variable_base_eight}_000_band_1', }\n",
     "\n",
     "    expected_avnir_results_eight = {'authority': 'EPSG',\n",
     "                                    'cs': 'Projected',\n",
     "                                    'gcs': 'WGS 84',\n",
     "                                    'gcs_epsg': '4326',\n",
-    "                                    'n_bands': 16,\n",
+    "                                    'n_bands': 4,\n",
     "                                    'proj_cs':'WGS 84 / UTM zone 17N',\n",
     "                                    'proj_epsg': '32617',\n",
     "                                    'spatial_extent': [9.4, 10.24, -79.7, -79.2],\n",
